Update and rename 2019-08-07-Welcome.markdown to 2019-08-07-welcome.markdown

--- a/_posts/2019-08-07-welcome.markdown
+++ b/_posts/2019-08-07-welcome.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Half Lifed"
+title:  "Welcome"
 date:   2019-08-07 21:24:03 -0700
 categories: jekyll update
 ---
