more text to welcome

--- a/_posts/2019-08-07-welcome.md
+++ b/_posts/2019-08-07-welcome.md
@@ -7,4 +7,13 @@ categories: jekyll update
 How this started
 =================
 
-Catching inspiration by the tail is nearly impossible. Inspiration grabs us by the neck whenever it wants, randomly, and unexpectedly. Inspiration's elixir is, well, anything. Half-lifed is the culmination of a lot of thinking, sorting out what it means to be 50, your life half lived, finding yourself and being comfortable with where self is found. Done a lot of thinking, doing a lot of thinking. The thinking part never ends. Never. Eventually the doing happens, the inspiration.
+Catching inspiration by the tail is nearly impossible. Inspiration grabs us by the neck whenever it wants, randomly, and unexpectedly. Inspiration's elixir is, well, anything. Half-lifed is the culmination of a lot of thinking, sorting out what it means to be 50, your life half lived, finding yourself and being comfortable with where self is found. 
+
+Done a lot of thinking, doing a lot of thinking. The thinking part never ends. Never. Eventually the doing has to happen. In other words, the inspiration.
+
+Goals of this blog
+--------------
++ Personal development
++ Professional development
++ Stories about people who practice both
+
