--- a/_posts/2019-08-07-welcome.md
+++ b/_posts/2019-08-07-welcome.md
@@ -3,6 +3,7 @@ layout: post
 title:  "How this started"
 date:   2019-08-07 21:24:03 -0700
 categories: jekyll update
+truncatewords: 20
 ---
 How this started
 =================
