--- a/_posts/2019-08-07-welcome.md
+++ b/_posts/2019-08-07-welcome.md
@@ -4,6 +4,7 @@ title:  "How this started"
 date:   2019-08-07 21:24:03 -0700
 categories: jekyll update
 truncatewords: 20
+author: Chris Ripley
 ---
 
 Catching inspiration by the tail is nearly impossible. Inspiration grabs us by the neck whenever it wants, randomly, and unexpectedly.
